fix: styles selectors fixes for datagrid and select (backport)
- datagrid fix allows properly nesting of datagrids inside other datagrids detail panes
- select fix fixes issue with caret overlapping success-state indicator

--- a/packages/angular/projects/clr-angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/packages/angular/projects/clr-angular/src/data/datagrid/_datagrid.clarity.scss
@@ -1,4 +1,4 @@
-// Copyright (c) 2016-2020 VMware, Inc. All Rights Reserved.
+// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
 // This software is released under MIT license.
 // The full license information can be found in LICENSE in the root directory of this project.
 
@@ -1743,7 +1743,8 @@
 
   // Small screens should only display the detail pane when opened, or optionally forced by a class
   .datagrid-detail-overlay {
-    &.datagrid-detail-open .datagrid-inner-wrapper {
+    // too specific query needed to avoid issues with nested datagrids
+    &.datagrid-detail-open > .datagrid-outer-wrapper > .datagrid-inner-wrapper {
       display: none;
     }
     .datagrid-detail-pane {
@@ -1752,7 +1753,8 @@
     }
   }
   @media screen and (max-width: map-get($clr-grid-breakpoints, sm)) {
-    .datagrid-detail-open .datagrid-inner-wrapper {
+    // too specific query needed to avoid issues with nested datagrids
+    .datagrid-detail-open > .datagrid-outer-wrapper > .datagrid-inner-wrapper {
       display: none;
     }
     .datagrid-detail-pane {
